# fm_ice

./: .gitignore  CLAUDE.md  DATA.md  IMPLEMENTATION_PLAN.md  README.md  SAM2_Model1.ipynb  STATUS.md  job.pbs  job_dinov2.pbs  job_full.pbs  pyproject.toml  requirements-ricenet.txt  requirements.txt
configs/: pipeline.yaml  stations.yaml
docs/: FM_ice_plan_v2.md  IDEAS.md  discussion_interim.tex
scripts/: download_all.sh  extract_embeddings_ccast.sbatch
src/fm_ice/: __init__.py  config.py  http_util.py
src/fm_ice/baselines/: __init__.py  changepoint.py  changepoint_events.py  degreeday.py  ricenet_baseline.py
src/fm_ice/data/: __init__.py  assemble_clips.py  degree_days.py  download_ice_flags.py  download_images.py  download_stage.py  download_temperature.py  labels.py  qc.py
src/fm_ice/evaluation/: __init__.py  entropy_jam.py  error_analysis.py  evaluate.py  figures.py  metrics.py  phase3_report.py  phase4_table.py  phase5_report.py  probe_separability.py  reextract_events.py  reference_events.py
src/fm_ice/features/: __init__.py  extract_embeddings.py
src/fm_ice/models/: __init__.py  events.py  temporal_head.py  train.py  transfer.py
