[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fm_ice"
version = "0.1.0"
description = "Temporal foundation-model detection of river-ice onset and breakup"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# Editable install makes `python -m fm_ice.data.download_images` work:
#   pip install -e .
